# gcal-fast-mcp

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/gcal_fast_mcp/: __main__.py  auth.py  calendar_service.py  config.py  server.py  types.py
src/gcal_fast_mcp/tools/: calendar_ops.py  event_ops.py  freebusy_ops.py
tests/: conftest.py  test_event_ops.py  test_types.py
